[package]
name = "ear"
description = "EAT Attestation Results implementation"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/veraison/rust-ear"
readme = "README.md"
license = "Apache-2.0"
keywords = ["ear", "serde"]
categories = ["data-structures", "encoding"]

[dependencies]
base64 = "0.21.2"
ciborium = "0.2.0"
cose-rust = "0.1.2"
hex = "0.4.3"
jsonwebtoken = "8"
openssl = "0.10.54"
phf = {version = "0.11.1", features = ["macros", "serde"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0.93", features = ["raw_value"]}
thiserror = "1.0.40"
